--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -32,10 +32,10 @@
                 <span>Favorite Book</span>
             </button>
         </form>
-        <form class="liked-book-btn" th:if="${faved == 'AlreadyFaved'}" th:action="@{/unFavoriteBook/{userId}/{bookId}(userId=${user.id},bookId=${singleBookInfo.id})}" th:object="${favBookObject}" method="post">
+        <form th:if="${faved == 'AlreadyFaved'}" th:action="@{/unFavoriteBook/{userId}/{bookId}(userId=${user.id},bookId=${singleBookInfo.id})}" th:object="${favBookObject}" method="post">
             <input type="hidden" th:field="*{userId}" th:value="${user.id}">
             <input type="hidden" th:field="*{bookId}" th:value="${singleBookInfo.id}">
-            <button type="submit">
+            <button type="submit" class="unliked-book-btn">
                 <span>unFavorite Book</span>
             </button>
         </form>
