--- a/src/main/resources/static/css/singleBookStyleSheet.css
+++ b/src/main/resources/static/css/singleBookStyleSheet.css
@@ -23,7 +23,7 @@
     border-radius: 20px;
 }
 /*=== Purchase Book Button & Favorite Book Button ===*/
-#left-side-book-container .purchase-book-btn, #left-side-book-container .liked-book-btn,#left-side-book-container .purchase-book-btn, #left-side-book-container form .unliked-book-btn,#left-side-book-container .write-review-button{
+#left-side-book-container .purchase-book-btn, #left-side-book-container form .liked-book-btn,#left-side-book-container .purchase-book-btn, #left-side-book-container form .unliked-book-btn,#left-side-book-container .write-review-button{
     background-color: #13aa52;
     border: 1px solid #13aa52;
     border-radius: 4px;
@@ -47,21 +47,22 @@
     text-decoration: none;
 }
 /*=== Purchase Book Button: HOVER & Favorite Book Button Hover ===*/
-#left-side-book-container .purchase-book-btn:hover, #left-side-book-container .liked-book-btn:hover,#left-side-book-container .purchase-book-btn:hover, #left-side-book-container form .unliked-book-btn:hover, #left-side-book-container .write-review-button:hover{
+#left-side-book-container .purchase-book-btn:hover, #left-side-book-container form .liked-book-btn:hover,#left-side-book-container .purchase-book-btn:hover, #left-side-book-container form .unliked-book-btn:hover, #left-side-book-container .write-review-button:hover{
     background-color: #0e8641;
     border: 1px solid #0e8641;
     transform: translateY(-2px);
     box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
 }
 /*=== Favorite Book Button ===*/
-#left-side-book-container .liked-book-btn{
+#left-side-book-container form .liked-book-btn{
     background-color: #A2BADCFF;
     border: 1px solid #A2BADCFF;
     color: #1e1e1e;
     margin-top: 24px;
+    width: 100%;
 }
 /*=== Favorite Book Button Hover ===*/
-#left-side-book-container .liked-book-btn:hover{
+#left-side-book-container form .liked-book-btn:hover{
     background-color: rgba(100, 149, 237, 0.49);
     border: 1px solid rgba(100, 149, 237, 0.49);
     color: #fff;
